--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,157 @@
-div {
-    color: red;
+body {
+    margin: 0;
 }
 
-header {
-    height: 90px;
-    width: 100%;
+main {
+    margin: 0;
+}
+
+.header {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 26px 10px;
+    height: 52px;
+    box-sizing: border-box;
 }
 
-.header-logo {
-    width: 153px;
-    height: 20px;
-    float: left;
+.header-content {
+    flex-grow: 1;
+    display: flex;
+    align-items: flex-start;
 }
 
 .header-navigation {
-    list-style-type: none;
-    width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+    flex-grow: 1;
+}
+
+.header-content-logo {
+    width: 153px;
+    height: 24px;
+}
+
+.header-navigation-list {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header-navigation-list a {
+    color: black;
+    text-decoration: none;
+}
+
+.header-navigation-list a:hover {
+    color: red;
+}
+
+.high-light-list-item div {
+    color: red;
+    padding: 6px;
+    border-bottom-style: solid;
+    border-bottom-color: red;
+}
+
+.main-content-welcome {
+    background-image: url("../assets/hp_banner_about_us_campaign.png");
+    min-height: 478px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+}
+
+.main-content-welcome-word {
+    margin-right: 75%;
+    padding-left: 0;
+    padding-right: 0;
+    width: 30%;
+    display: grid;
+    align-self: center;
+    color: white;
+    margin-top: auto;
 
 }
 
-.header-navigation li {
-    float: left;
+.main-content-welcome-word h1 {
+    box-sizing: border-box;
+    color: white;
+    font-family: 'Bitter-Bold', 'NotoSerifSC-Black', sans-serif;
+    font-size: 64px;
+    height: 70px;
+    margin: 0;
+    text-align:center;
+}
+
+.main-content-welcome-word h2 {
+    box-sizing: border-box;
+    color: #F2617A;
+    font-size: 48px;
+    font-weight: 700;
+    height: 58px;
+    margin: 0;
+    text-align:center;
+}
+
+.main-content-btn{
+    align-items: center;
+    background: none;
+    border: none;
+    color: white;
+    padding: 0;
+    gap: 8px;
+}
+
+.main-content-btn:after{
+    content: " ";
+    display: inline-block;
+    transform: rotate(45deg);
+    height: .4rem;
+    width: .4rem;
+    border-width: 2px 2px 0px 0px;
+    border-color: white;
+    border-style: solid;
+    position: relative;
+    top: 0
+}
+
+.main-content-btn-div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 209px;
+    height: 50px;
+    margin-top: auto;
+
+    background: rgba(217, 217, 217, 0.3);
+    border-radius: 4px;
+}
+
+.main-card-content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    gap: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 0;
+}
+
+.card{
+    min-width: 200px;
+    width: 450px;
+    background: #EDF1F3;
+}
+
+.card-content{
+    padding: 16px;
 }
