--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ main {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
     padding: 26px 10px;
@@ -17,17 +16,21 @@ main {
     box-sizing: border-box;
 }
 
-.header-content {
-    flex-grow: 1;
+.header-logo-block {
+    flex: 1 1 0;
     display: flex;
     align-items: flex-start;
 }
 
 .header-navigation {
+    flex: 1 1 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-grow: 1;
+    justify-content: center;
+}
+
+.header-blank-block{
+    flex: 1 1 0;
 }
 
 .header-content-logo {
